--- a/cedr/package.json
+++ b/cedr/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opendata-connectors-monitor",
+  "name": "opendata-connectors-cedr",
   "version": "1.0.0",
   "description": "",
   "main": "dist/main.js",
@@ -8,14 +8,12 @@
     "build": "tsc"
   },
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@types/luxon": "^1.24.3",
-    "@types/node": "^14.0.24",
+    "@types/node": "^14.0.25",
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "luxon": "^1.24.1"
+    "axios": "^0.19.2"
   }
 }
