--- a/monitor/package.json
+++ b/monitor/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "luxon": "^1.24.1"
+    "luxon": "^1.24.1",
+    "otevrene-formalni-normy-dts": "^0.1.4"
   }
 }
