--- a/cedr/package.json
+++ b/cedr/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "change-case": "^4.1.1",
     "otevrene-formalni-normy-dts": "^0.1.6"
   }
 }
