Introduce common module for typescript server

--- a/ckan/Dockerfile
+++ b/ckan/Dockerfile
@@ -1,12 +1,16 @@
 FROM node:alpine
 
-COPY package.json package-lock.json ./
+# BUILD
+WORKDIR /srv
 
-RUN npm ci
+COPY . .
 
-COPY . . 
+RUN cd common && npm ci && npm run build
 
-RUN npm run build
+RUN cd ckan && npm ci && npm run build
+
+# RUN
+WORKDIR /srv/ckan
 
 EXPOSE 3000
 
