--- a/cedr/package.json
+++ b/cedr/package.json
@@ -5,7 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "node dist/main.js",
-    "build": "tsc"
+    "build": "tsc",
+    "build:docker": "docker build -f ./Dockerfile -t opendata-connectors-cedr ../"
   },
   "author": "",
   "license": "GPL-3.0-or-later",
@@ -16,6 +17,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "change-case": "^4.1.1",
-    "otevrene-formalni-normy-dts": "^0.1.11"
+    "otevrene-formalni-normy-dts": "^0.1.11",
+    "opendata-connectors-common": "../common"
   }
 }
