--- a/ckan/package.json
+++ b/ckan/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/main.js",
-    "build": "tsc"
+    "build": "tsc",
+    "build:docker": "docker build -f ./Dockerfile -t opendata-connectors-ckan ../"
   },
   "author": "",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "axios": "^0.19.2",
-    "otevrene-formalni-normy-dts": "^0.1.11"
+    "otevrene-formalni-normy-dts": "^0.1.11",
+    "opendata-connectors-common": "../common"
   },
   "devDependencies": {
     "@types/node": "^14.0.26",
