--- a/monitor/package.json
+++ b/monitor/package.json
@@ -5,7 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "node dist/main.js",
-    "build": "tsc"
+    "build": "tsc",
+    "build:docker": "docker build -f ./Dockerfile -t opendata-connectors-monitor ../"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "luxon": "^1.24.1",
-    "otevrene-formalni-normy-dts": "^0.1.11"
+    "otevrene-formalni-normy-dts": "^0.1.11",
+    "opendata-connectors-common": "../common"
   }
 }
