--- a/katalog/Dockerfile
+++ b/katalog/Dockerfile
@@ -3,14 +3,11 @@ FROM node:alpine
 # BUILD
 WORKDIR /srv
 
+COPY package.json package-lock.json ./
+RUN npm ci
+
 COPY . .
-
-RUN cd common && npm ci && npm run build
-
-RUN cd katalog && npm ci && npm run build
-
-# RUN
-WORKDIR /srv/katalog
+RUN npm run build
 
 EXPOSE 3000
 
