--- a/katalog/package.json
+++ b/katalog/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/main.js",
+    "start": "node dist/index.js",
     "build": "tsc",
-    "build:docker": "docker build -f ./Dockerfile -t opendata-connectors-katalog ../"
+    "build:docker": "docker build -t opendata-connectors-katalog ."
   },
   "author": "",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "axios": "^0.19.2",
+    "fastify": "^3.9.2",
     "mime-types": "^2.1.28",
-    "opendata-connectors-common": "../common",
     "otevrene-formalni-normy-dts": "^0.1.12"
   },
   "devDependencies": {
