--- a/monitor/Dockerfile
+++ b/monitor/Dockerfile
@@ -1,16 +1,12 @@
 FROM node:alpine
 
-# BUILD
 WORKDIR /srv
 
+COPY package.json package-lock.json ./
+RUN npm ci
+
 COPY . .
-
-RUN cd common && npm ci && npm run build
-
-RUN cd monitor && npm ci && npm run build
-
-# RUN
-WORKDIR /srv/monitor
+RUN npm run build
 
 EXPOSE 3000
 
